Update and rename About.html to about.html

--- a/about.html
+++ b/about.html
@@ -470,7 +470,7 @@
                            and safety regulations in the kitchen. Additionally, he monitors inventory levels and coordinates 
                            with suppliers to ensure timely procurement of ingredients.</p>
                         <div class="social">
-                            <a href="https://www.facebook.com/dammeyd" target="_blank" rel="noopener noreferrer" title="Twitter">
+                            <a href="https://www.facebook.com/emmanueldamilolaadejube" target="_blank" rel="noopener noreferrer" title="Twitter">
                                 <i class="fab fa-facebook-f"></i>
                             </a>  
                             <a href="mailto:dammeyd@gmail.com" title="Email">
